--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
 apache-airflow[spark]
 apache-airflow-providers-google
 pyarrow
+celery
+kombu
+tornado
+werkzeug
+pyspark==3.2.1
+SQLAlchemy
+wtforms
+apache-airflow-providers-apache-spark
