Grocery Sales: ReadMe

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,16 @@ TF_VAR_location=TF_VAR_location
 TF_VAR_zone=TF_VAR_zone
 TF_VAR_bq_dataset_name=TF_VAR_bq_dataset_name
 TF_VAR_gcs_storage=TF_VAR_gcs_storage
+
+# Airflow
+AIRFLOW_PROJ_DIR=./airflow
+AIRFLOW_UID=501
+
+GCP_PROJECT_ID=GCP_PROJECT_ID
+GCP_GCS_BUCKET=GCP_GCS_BUCKET
+BIGQUERY_DATASET=BIGQUERY_DATASET
+AIRFLOW_CONN_SPARK='{
+    "conn_type": "spark",
+    "host": "spark://spark-master",
+    "port": 7077
+}'
